--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,80 +11,61 @@
   
   </div>
   
-  <div class="row img2" style=" margin-top: 23px;">
+  <div class="row img2" id="flipbook" style=" margin-top: 23px;margin-bottom: 23px;">
         <!--Occupe 2 colonnes-->
-        <div class="col-2 col-cm-12" style="background-color: #2e8b57a3;;">
+        <div class="col-2 col-md-2" style="background-color: #2e8b57a3;;">
         
 
         </div>
         <!--Occupe 8 colonnes-->
-        <div class="col-8 " style="background-color: #fff">
+        <div class="col-8 col-md-8  " style="background-color: #fff">
                 <div>
                       <p style="    margin-bottom: 0rem; text-align: -webkit-center;">
                         <i class="fa fa-utensils me-3"></i>Royal</p>
-                      <h4 style="text-align: center; border-bottom-style: ridge; font-family: cursive; font-size: xx-large;"><strong> RESTAURANT</strong></h4>
+                      <h4 style="text-align: center; border-bottom-style: ridge; font-family: cursive;"><strong> RESTAURANT</strong></h4>
                       <h4 class="H4">Delecious Food</h4>
                 </div >
-              
-                <table id="table1" class="subtitle-table">
-                          <tr>
-                              <th colspan="2"  style="text-align: center; margin-top: 90px; font-size: xx-large; font-family: serif;">  <strong>LUNCH</strong></th>
-                          </tr>
-                          <tr>
-                              <td  class="left-col">SPICY BEEF BARBACUE</td>
-                              <td class="right-col">$20</td>
-                          </tr>
-                          <tr>
-                            <td class="left-col" >SPICY BEEF BARBACUE</td>
-                            <td class="right-col">$20</td>
-                        </tr>
-                        <tr>
-                          <td class="left-col">SPICY BEEF BARBACUE</td>
-                          <td class="right-col">$20</td>
-                      </tr>
-                      <tr>
-                        <td class="left-col">SPICY BEEF BARBACUE</td>
-                        <td class="right-col">$20</td>
-                    </tr>
-                  
-                  <tr>
-                    <td class="left-col">SPICY BEEF BARBACUE</td>
-                    <td class="right-col">$20</td>
-                </tr>
-                          <!-- Ajoutez ici les lignes de données si nécessaire -->
-                      </table>
+              <!-- Pagination Controls -->
+<div class="pagination-controls">
+  <button (click)="prevPage()" [disabled]="currentPageIndex === 0">Previous</button>
+  <button (click)="nextPage()" [disabled]="currentPageIndex === tableOfContents.length - 1">Next</button>
+</div>
 
-                      <table id="table2" class="subtitle-table hidden" >
-                        <tr>
-                            <th colspan="2"  style="text-align: center; margin-top: 90px; font-size: xx-large; font-family: serif;">  
-                              <strong>Cofee</strong></th>
-                        </tr>
-                        <tr>
-                            <td  class="left-col">SPICY BEEF BARBACUE</td>
-                            <td class="right-col">$20</td>
-                        </tr>
-                        <tr>
-                          <td class="left-col" >SPICY BEEF BARBACUE</td>
-                          <td class="right-col">$20</td>
-                      </tr>
-                      <tr>
-                        <td class="left-col">SPICY BEEF BARBACUE</td>
-                        <td class="right-col">$20</td>
-                    </tr>
-                    <tr>
-                      <td class="left-col">SPICY BEEF BARBACUE</td>
-                      <td class="right-col">$20</td>
-                  </tr>
-                
-                <tr>
-                  <td class="left-col">SPICY BEEF BARBACUE</td>
-                  <td class="right-col">$20</td>
-              </tr>
-                        <!-- Ajoutez ici les lignes de données si nécessaire -->
-                    </table>
+<!-- Display items for the current page -->
+<table id="table1" 
+class="subtitle-table"
+(mousedown)="startDrag($event)"
+(mouseup)="endDrag($event)"
+(dragstart)="preventDefault($event)">
+  <tr>
+    <th style="text-align: center;  font-family: serif;">
+      <strong>{{ tableOfContents[currentPageIndex].title }}</strong>
+    </th>
+  </tr>
+
+  <tr *ngFor="let elem of tableOfContents[currentPageIndex].list" class="flex">
+    <td >{{ elem.name }}</td>
+    <td >{{ elem.price }}</td>
+  </tr>
+</table>
+
+
+
+
+
+                <!-- <table id="table1" class="subtitle-table" *ngFor="let item of tableOfContents">
+                          <tr>
+                              <th colspan="2"  style="text-align: center; margin-top: 90px; font-size: xx-large; font-family: serif;">  <strong>{{item.title}}</strong></th>
+                          </tr>
+
+                          <tr *ngFor="let elem of item.list">
+                            <td class="left-col">{{elem.name}}</td>
+                            <td class="right-col">{{elem.price}}</td>
+                        </tr>                         
+                </table> -->
         </div>
 
         <!--Occupe 2 colonnes-->
-        <div class="col-2 col-cm-12" style="background-color: #ff0000a8;"></div>
+        <div class="col-2 col-md-2" style="background-color: #ff0000a8;"></div>
   </div>
  
